Add my top header section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Assignment-1</title>
 </head>
 <body>
-    
+    <header>
+        <div class="top-content">
+            <div>
+                <h3 class="Top-Name">Taif Ahmed</h3>
+            </div>
+            <div>
+                <button class="Top-button" type="button">Download Resume</button>
+            </div>
+        </div>
+        <section class="Bg-Container">
+            <div class="Bg-Div">
+                <img src="assets/Group.png" alt="">
+                <h1 class="Bg-Header">"In the near future, I hope to become a <br>Developer."</h1>
+                <p class="Bg-Text-Pragraph">
+                   I am commited to become a junior web-Developer in six month. Cause I have a strong mindset for that
+                </p>
+            </div>
+            <div class="Bg-Div"> 
+                <a class="Bg-btn" href="#Contact-with-me"><span class="Deco-Btn">Contact with me</span></a>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
