--- a/index.html
+++ b/index.html
@@ -28,5 +28,53 @@
             </div>
         </section>
     </header>
+    <main class="Main">
+        <section class="Why-Web-Deve">
+            <div>
+                <h2 class="Web-Deve-Title">Why Web Development??</h2>
+                <p class="Web-Deve-Pragraph">
+                    Web development combines creativity with technical skills to build websites and applications. It's a challenging, in-demand field with opportunities for freelance work.
+                </p>
+            </div>
+            <div class="Why-Web-Container">
+                <div class="Why-Web-Content">
+                    <div>
+                        <h1 class="why-web-title">I will Do Coding and Change The <br>World</h1>
+                        <p class="why-web-pragraph">
+                            Using coding to develop innovative solutions in areas like healthcare, education, and sustainability can drive significant positive change, improving lives, expanding knowledge, and preserving our planet for future generations.
+                        </p>
+                        <a class="Web-Ancor" target="_blank" href="">Learn More</a>
+                    </div>
+                    <div>
+                        <img src="assets/Layer_1.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="Why-Web-Container">
+                <div class="Why-Web-Content">
+                    <div>
+                        <img src="assets/Group 3.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="why-web-title">I will help People by creating Modern <br> Web System</h1>
+                        <p class="why-web-pragraph">I aim to create modern web systems that enhance user experiences, streamline processes, and provide innovative solutions across various industries, ultimately helping people by improving their online interactions and services.</p>
+                        <a class="Web-Ancor" target="_blank" href="">learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="Why-Web-Container">
+                <div class="Why-Web-Content">
+                    <div>
+                        <h1 class="why-web-title">I will Do Coding and Change The <br> World</h1>
+                        <p class="why-web-pragraph">I will use my coding skills to develop modern web systems that improve user experiences, streamline processes, and provide innovative solutions, ultimately making a positive impact on the world.</p>
+                        <a class="Web-Ancor" target="_blank" href="">learn More</a>
+                    </div>
+                    <div>
+                        <img src="assets/Group 4.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
