--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
                 </div>
             </div>
         </section>
+        <section class="Inspiration">
+            <div>
+                <h1 class="Inspiration-Title">
+                    My Inspiration
+                </h1>
+                <p class="Inspiration-Pragraph">
+                    Inspiration fuels creativity and motivation, driving us to achieve our goals and dreams. It often stems from influential figures, personal experiences, nature, art, or overcoming challenges.
+                </p>
+            </div>
+        
+                <iframe class="Video Ifram-Desing" width="560" height="315" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=zAvqeZnflg-N3Ik_" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        
+    </section>
     </main>
 </body>
 </html>
