Added new section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,34 @@
                 <iframe class="Video Ifram-Desing" width="560" height="315" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=zAvqeZnflg-N3Ik_" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
     </section>
+    <section class="Current-Target">
+        <h1 class="Current-Target-Title">My Current Target</h1>
+        <p class="Current-Target-Pragraph">
+            Web development involves creating and maintaining websites. It includes aspects like web design, web publishing, web programming, and database management. Essential technologies include HTML, CSS, JavaScript, and backend frameworks.
+        </p>
+        <div class="Current-Target-Container">
+           <div class="Target-Div-HTML">
+            <img src="assets/html.png" alt="">
+            <h3 class="HTML-Title">HTML</h3>
+            <p class="HTML-Pragraph">HTML (HyperText Markup Language) structures web content with tags, enabling the creation of web pages and applications.
+            </p>
+            <a class="HTML-ancor" target="_blank" href="">Learn More</a>
+           </div>
+           <div class="Target-Div-CSS">
+            <img src="assets/css.png" alt="">
+            <h3 class="HTML-Title">CSS</h3>
+            <p class="HTML-Pragraph">CSS (Cascading Style Sheets) styles HTML content by controlling layout, colors, fonts, and overall appearance of web pages.</p>
+            <a class="HTML-ancor" target="_blank" href="">Learn More</a>
+           </div>
+           <div class="Target-Div-JS">
+            <img src="assets/js.png" alt="">
+            <h3 class="HTML-Title">JavaScript</h3>
+            <p class="HTML-Pragraph">JavaScript (JS) is a programming language that enables interactive and dynamic content on web pages, including animations, forms, and real-time updates.
+            </p>
+            <a class="HTML-ancor target="_blank" href="">Learn More</a>
+           </div>
+        </div>
+    </section>
     </main>
 </body>
 </html>
