added new section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
            </div>
         </div>
     </section>
+    <section class="Need-Support">
+        <h1 class="Support-Title">I need Support</h1>
+        <p class="Support-Pragraph">Learning web development: HTML, CSS, JavaScript, frameworks, backend, databases, deployment.
+        </p>
+        <div class="text-box">
+            <!-- <textarea placeholder="Suggest me any feedback for me" name="" id="">
+            </textarea> -->
+            <input placeholder="Suggest me any feedback for me" type="text" name="" id="">
+            <button class="text-box-Button" type="submit">Submit</button>
+        </div>    
+    </section>
     </main>
 </body>
 </html>
