--- a/index.html
+++ b/index.html
@@ -128,5 +128,15 @@
         </div>    
     </section>
     </main>
+    <footer id="Contact-with-me">
+        <div>
+            <h2 class="Footer-Name">An Open Commitment by Sabit Al Mahfuz</h2>
+        </div>
+        <div class="Footer-Ancor">
+        <a class="Footer-Ancor-FB" target="_blank" href="https://www.facebook.com/groups/796058045851945"><img src="assets/facebook.png" alt=""></a>
+        <a class="Footer-Ancor-git" target="_blank" href="https://github.com/ProgrammingHero1"><img src="assets/github.png" alt=""></a>
+        <a target="_blank" href="https://www.linkedin.com/company/programminghero/posts/?feedView=all"><img src="assets/linkedin-icon 1.png" alt=""></a>
+        </div>
+    </footer>
 </body>
 </html>
