checked in local server

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
         <div class="top-content">
             <div>
-                <h3 class="Top-Name">Taif Ahmed</h3>
+                <h3 class="Top-Name">Taif</h3>
             </div>
             <div>
                 <button class="Top-button" type="button">Download Resume</button>
@@ -33,16 +34,14 @@
             <div>
                 <h2 class="Web-Deve-Title">Why Web Development??</h2>
                 <p class="Web-Deve-Pragraph">
-                    Web development combines creativity with technical skills to build websites and applications. It's a challenging, in-demand field with opportunities for freelance work.
-                </p>
+                    There's a constant demand for skilled web developers as businesses and organizations continue to expand their online presence. This demand translates into numerous job opportunities and career stability.                </p>
             </div>
             <div class="Why-Web-Container">
                 <div class="Why-Web-Content">
                     <div>
                         <h1 class="why-web-title">I will Do Coding and Change The <br>World</h1>
                         <p class="why-web-pragraph">
-                            Using coding to develop innovative solutions in areas like healthcare, education, and sustainability can drive significant positive change, improving lives, expanding knowledge, and preserving our planet for future generations.
-                        </p>
+                            With coding, I can develop applications that enhance communication, bridge gaps in education, and provide access to critical resources. For instance, I can create platforms that connect remote learners with quality educational content, ensuring that knowledge is accessible to everyone, regardless of their geographical location.                        </p>
                         <a class="Web-Ancor" target="_blank" href="">Learn More</a>
                     </div>
                     <div>
@@ -57,7 +56,7 @@
                     </div>
                     <div>
                         <h1 class="why-web-title">I will help People by creating Modern <br> Web System</h1>
-                        <p class="why-web-pragraph">I aim to create modern web systems that enhance user experiences, streamline processes, and provide innovative solutions across various industries, ultimately helping people by improving their online interactions and services.</p>
+                        <p class="why-web-pragraph">This mission is about leveraging cutting-edge technology to design and develop web systems that improve lives. By building user-friendly, efficient, and accessible online platforms, I aim to solve real-world problems, enhance communication, and provide valuable resources.
                         <a class="Web-Ancor" target="_blank" href="">learn More</a>
                     </div>
                 </div>
@@ -66,11 +65,11 @@
                 <div class="Why-Web-Content">
                     <div>
                         <h1 class="why-web-title">I will Do Coding and Change The <br> World</h1>
-                        <p class="why-web-pragraph">I will use my coding skills to develop modern web systems that improve user experiences, streamline processes, and provide innovative solutions, ultimately making a positive impact on the world.</p>
+                        <p class="why-web-pragraph">This commitment embodies the power of technology to transform lives and societies. Through coding, I will create innovative solutions that tackle real-world challenges, improve access to information, and enhance communication. 
                         <a class="Web-Ancor" target="_blank" href="">learn More</a>
                     </div>
                     <div>
-                        <img src="assets/Group 4.png" alt="">
+                        <img src="assets/Group 4.png" alt="Image loading">
                     </div>
                 </div>
             </div>
@@ -81,8 +80,7 @@
                     My Inspiration
                 </h1>
                 <p class="Inspiration-Pragraph">
-                    Inspiration fuels creativity and motivation, driving us to achieve our goals and dreams. It often stems from influential figures, personal experiences, nature, art, or overcoming challenges.
-                </p>
+                    My inspiration comes from the boundless potential of technology to transform lives and shape the future.</p>
             </div>
         
                 <iframe class="Video Ifram-Desing" width="560" height="315" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=zAvqeZnflg-N3Ik_" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -91,26 +89,25 @@
     <section class="Current-Target">
         <h1 class="Current-Target-Title">My Current Target</h1>
         <p class="Current-Target-Pragraph">
-            Web development involves creating and maintaining websites. It includes aspects like web design, web publishing, web programming, and database management. Essential technologies include HTML, CSS, JavaScript, and backend frameworks.
-        </p>
+            My current target is to master web development over the next six months. This goal entails dedicating 6 to 8 hours daily to intensive study and practical application of web development.</p>
         <div class="Current-Target-Container">
            <div class="Target-Div-HTML">
             <img src="assets/html.png" alt="">
             <h3 class="HTML-Title">HTML</h3>
-            <p class="HTML-Pragraph">HTML (HyperText Markup Language) structures web content with tags, enabling the creation of web pages and applications.
+            <p class="HTML-Pragraph"> uses tags to format content and establish a document’s structure, making it essential for web development
             </p>
             <a class="HTML-ancor" target="_blank" href="">Learn More</a>
            </div>
            <div class="Target-Div-CSS">
             <img src="assets/css.png" alt="">
             <h3 class="HTML-Title">CSS</h3>
-            <p class="HTML-Pragraph">CSS (Cascading Style Sheets) styles HTML content by controlling layout, colors, fonts, and overall appearance of web pages.</p>
+            <p class="HTML-Pragraph">CSS (Cascading Style Sheets) is a stylesheet language used to control the presentation and layout of HTML documents.</p>
             <a class="HTML-ancor" target="_blank" href="">Learn More</a>
            </div>
            <div class="Target-Div-JS">
             <img src="assets/js.png" alt="">
             <h3 class="HTML-Title">JavaScript</h3>
-            <p class="HTML-Pragraph">JavaScript (JS) is a programming language that enables interactive and dynamic content on web pages, including animations, forms, and real-time updates.
+            <p class="HTML-Pragraph">JavaScript (JS) is a programming language used to create dynamic and interactive elements on websites.
             </p>
             <a class="HTML-ancor target="_blank" href="">Learn More</a>
            </div>
@@ -118,7 +115,7 @@
     </section>
     <section class="Need-Support">
         <h1 class="Support-Title">I need Support</h1>
-        <p class="Support-Pragraph">Learning web development: HTML, CSS, JavaScript, frameworks, backend, databases, deployment.
+        <p class="Support-Pragraph">Support me for learning HTML, CSS, JavaScript, Tailwing CSS, Bootstrap and many More!
         </p>
         <div class="text-box">
             <!-- <textarea placeholder="Suggest me any feedback for me" name="" id="">
@@ -130,11 +127,11 @@
     </main>
     <footer id="Contact-with-me">
         <div>
-            <h2 class="Footer-Name">An Open Commitment by Sabit Al Mahfuz</h2>
+            <h2 class="Footer-Name">An Open Commitment by Taif Ahmed</h2>
         </div>
         <div class="Footer-Ancor">
-        <a class="Footer-Ancor-FB" target="_blank" href="https://www.facebook.com/groups/796058045851945"><img src="assets/facebook.png" alt=""></a>
-        <a class="Footer-Ancor-git" target="_blank" href="https://github.com/ProgrammingHero1"><img src="assets/github.png" alt=""></a>
+        <a class="Footer-Ancor-FB" target="_blank" href="https://www.facebook.com/"><img src="assets/facebook.png" alt=""></a>
+        <a class="Footer-Ancor-git" target="_blank" href="https://github.com/taif-01"><img src="assets/github.png" alt=""></a>
         <a target="_blank" href="https://www.linkedin.com/company/programminghero/posts/?feedView=all"><img src="assets/linkedin-icon 1.png" alt=""></a>
         </div>
     </footer>
